--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
     <h2>โปรเจกต์</h2>
 
     <div class="project">
-      <h3>เว็บไซต์ร้านกาแฟ</h3>
-      <p>สร้างเว็บไซต์สำหรับร้านกาแฟ โดยใช้ HTML, CSS และ JavaScript เพื่อแสดงเมนูและรับออเดอร์ออนไลน์</p>
+      <h3>แอบเครื่องคิดเลขด้วยภาษา Python</h3>
+      <p>สร้างแอพเครื่องคิดเลขด้วยภาษา python</p>
       <p><a href="#">ดูโปรเจกต์</a></p>
     </div>
 
     <div class="project">
-      <h3>แอปพลิเคชันจดบันทึก</h3>
-      <p>แอปพลิเคชันเล็กๆ สำหรับจดบันทึก สามารถเพิ่ม ลบ และแก้ไขรายการได้</p>
+      <h3>Bar Bar BAr</h3>
+      <p>Mai mee Ar rai</p>
       <p><a href="#">ดูโปรเจกต์</a></p>
     </div>
 
     <div class="project">
-      <h3>ระบบเช็คชื่อออนไลน์</h3>
-      <p>ระบบทดลองที่ใช้ฟอร์มและฐานข้อมูลสำหรับเช็คชื่อในห้องเรียน</p>
+      <h3>...</h3>
+      <p>...</p>
       <p><a href="#">ดูโปรเจกต์</a></p>
     </div>
   </main>
