--- a/index.html
+++ b/index.html
@@ -1,80 +1,46 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio ของฉัน</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f0f4f8;
-      color: #333;
-    }
-    header {
-      background-color: #007acc;
-      color: white;
-      padding: 30px;
-      text-align: center;
-    }
-    main {
-      padding: 40px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-    h2 {
-      border-bottom: 2px solid #007acc;
-      padding-bottom: 8px;
-    }
-    .project {
-      background-color: white;
-      border-radius: 8px;
-      padding: 20px;
-      margin: 20px 0;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    .project h3 {
-      margin-top: 0;
-      color: #007acc;
-    }
-    .project a {
-      color: #007acc;
-      text-decoration: none;
-    }
-    .project a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <!-- AOS Animation -->
+   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+   <script>
+        AOS.init();
+   </script>
+    
 </head>
 <body>
 
-  <header>
-    <h1>ผลงานของฉัน</h1>
-    <p>ยินดีต้อนรับสู่หน้าแสดงผลงานของฉัน</p>
-  </header>
+    <header>
+        <h1>ผลงานของฉัน</h1>
+        <p>ยินดีต้อนรับสู่หน้าแสดงผลงานของฉัน</p>
+    </header>
 
-  <main>
-    <h2>โปรเจกต์</h2>
+    <main>
+        <h2>โปรเจกต์</h2>
 
-    <div class="project">
-      <h3>แอบเครื่องคิดเลขด้วยภาษา Python</h3>
-      <p>สร้างแอพเครื่องคิดเลขด้วยภาษา python</p>
-      <p><a href="#">ดูโปรเจกต์</a></p>
-    </div>
+        <div class="project">
+            <h3>Make X Robot Contest</h3>
+            <p>เข้าร่วมการเเข่งกันหุ่นยนต์ Make X จนถึงรอบ World Championships 2024</p>
+            <p><a href="project1.html">ดูรายละเอียด</a></p>
+        </div>
 
-    <div class="project">
-      <h3>Bar Bar BAr</h3>
-      <p>Mai mee Ar rai</p>
-      <p><a href="#">ดูโปรเจกต์</a></p>
-    </div>
+        <div class="project">
+            <h3>แข่ง Game Jam ของ NuutorCub</h3>
+            <p>แข่งทำเกมใน 48 ชั่วโมง</p>
+            <p><a href="project2.html">ดูรายละเอียด</a></p>
+        </div>
 
-    <div class="project">
-      <h3>...</h3>
-      <p>...</p>
-      <p><a href="#">ดูโปรเจกต์</a></p>
-    </div>
-  </main>
+        <div class="project">
+            <h3>โปรเจกต์งาน python ที่เคยทำมา เเละ อื่นๆ</h3>
+            <p>โครงงานเเละโปรเจกต์ทั้งหมดที่เคยทำมา</p>
+            <p><a href="project3.html">ดูรายละเอียด</a></p>
+        </div>
+    </main>
 
 </body>
 </html>
